BE - refactor correct sequences ranges Row and Column Logic - other methods